scss/components/_nav.scss
@import 'components/variables';

.btn-nav {
  width: 60px;
  right: 15px;
  top: 20px;
  position: fixed;
  transition: ease all .7s;
  z-index: 1000;

  div {
    margin-top: 10px;
    width: 100%;
    border-top: 1px solid $black;
    transition: ease all .7s;
  }
}

.btn-nav:hover {
  cursor: pointer;
  width: 80px;
  transition: ease all .7s;

    div {
      border-top: 1px solid $nav;
      transition: ease all .7s;
    }
}

.nav-aside {
  position: fixed;
  padding-left: 70px;
  right: 0px;
  top: 0px;
  width: 480px;
  background-color: $nav;
  height: 100%;
  z-index: 1000;

  .nav-close {
    width: 80px;
    float: right;
    margin-top: 20px;
    margin-right: -20px;
    font-size: 30px;
  }

  .nav-close:hover {
    cursor: pointer;
  }

  h3 {
    margin: 100px 0px;
    font-weight: lighter;
  }

  h4 {
    font-weight: lighter;
  }

  a {
    color: $blackHover;
  }

  .social-icons {
    text-decoration: none;
    padding-right: 40px;
    width: 100%;

    img {
      position: absolute;
      height: 35px;
      bottom: 100px;
    }

  }

}

.nav-aside.ng-leave {
  animation: slideOutRight .7s;
}
.nav-aside.ng-enter {
  animation: slideInRight .7s;
}

@media(max-width: 500px) {
  .nav-aside{
    width: 100%;
    padding-left: 30px;

    .social-icons {
      img {
        bottom: 10px;
      }
    }
  }
}

